# Part4Project

./: .gitignore  README.md  scenario.md
api-interceptor/: CHANGELOG.md  README.md
api-sandbox/: package-lock.json  package.json  tsconfig.json
api-sandbox/src/: App.css  App.tsx  examplePythonCode.txt  index.css  index.tsx  split-view.css  types.tsx
api-sandbox/src/components/: CodeBlock.tsx  CodeEditor.tsx  DocumentationPanel.tsx  FolderStructure.tsx  JsonViewer.js  RequestPanel.tsx  ResponsePanel.tsx  ThemeToggle.tsx
api-sandbox/src/constants/: apiConstants.ts
api-sandbox/src/contexts/: FileManagerContext.tsx  LoggingContext.tsx  NodeStateContext.tsx  ThemeContext.tsx
api-sandbox/src/hooks/: reduxHooks.ts  useAPIData.tsx  useFileSystem.ts  useFolderStructure.tsx
api-sandbox/src/pages/: APIRequestViewer.tsx  APIVisualiser.tsx  DashboardView.tsx  EndpointGenerator.tsx  EndpointGeneratorWithContext.tsx  MainView.tsx  SecurityScanView.tsx
api-sandbox/src/redux/: store.ts
api-sandbox/src/styles/: CodeEditor.css  containerStyles.tsx
api-sandbox/src/themes/: globalTheme.ts
api-vscode-extension/: package-lock.json  package.json
api-vscode-extension/src/: extension.ts
backend/: Dockerfile  env.example  pyproject.toml
backend/app/: github_api_docs.db  main.py
backend/app/services/: code_generator.py  data_processor.py  endpoint_explorer.py  executor.py  proxy.py  security_analysis.py
backend/githubDocs/: DocumentationExtractor.py  EndpointExtractor.py  JsonFilteringScript.py  endpoints.json  final-output.json  test-working.py
(+65 files in other folders)
