[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Isaac"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "openai (>=1.77.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false